Update JLPTApp to support new test structure and detailed statistics
- Modified test loading logic to fetch from a new set of JSON files, reducing the number of tests from 10 to 5.
- Enhanced the user interface to display detailed statistics, including overall performance and section-wise breakdowns.
- Updated HTML to include a dedicated section for detailed statistics after test completion.
- Improved CSS styles for the new statistics layout, ensuring better visibility and user experience.
- Refactored question rendering logic to accommodate changes in data structure and improve readability.

--- a/index.html
+++ b/index.html
@@ -246,6 +246,9 @@
                             <span class="stat-value" id="testTime">0:00</span>
                         </div>
                     </div>
+                    <div id="detailedStats" class="detailed-stats">
+                        <!-- Detailed statistics will be loaded here -->
+                    </div>
                     <div class="test-actions">
                         <button class="btn primary" id="reviewTestBtn">Review Answers</button>
                         <button class="btn secondary" id="retakeTestBtn">Retake Test</button>
